--- a/services/Return to milestone.workflow/Contents/Info.plist
+++ b/services/Return to milestone.workflow/Contents/Info.plist
@@ -8,7 +8,7 @@
 			<key>NSMenuItem</key>
 			<dict>
 				<key>default</key>
-				<string>Return to milestone</string>
+				<string>Return To Milestone</string>
 			</dict>
 			<key>NSMessage</key>
 			<string>runWorkflowAsService</string>
