--- a/services/Share As Renga.workflow/Contents/Info.plist
+++ b/services/Share As Renga.workflow/Contents/Info.plist
@@ -8,7 +8,7 @@
 			<key>NSMenuItem</key>
 			<dict>
 				<key>default</key>
-				<string>Shere As Renga</string>
+				<string>Share As Renga</string>
 			</dict>
 			<key>NSMessage</key>
 			<string>runWorkflowAsService</string>
